# tcc

./: .gitignore  run_frontend.py
src/backend/: Cargo.toml
src/backend/src/: db_analyser.rs  main.rs  navidrome.rs  util.rs
src/backend/src/analysis/: albums.rs  artist.rs  artists.rs  mod.rs  tracks.rs
src/backend/src/api/: error.rs  handlers.rs  login.rs  mod.rs  response.rs
src/backend/src/handlers/: albums.rs  artist.rs  artists.rs  login.rs  mod.rs  relay.rs  tracks.rs
src/backend/src/mbz/: mod.rs  session.rs
src/backend/src/navidrome/: mod.rs  native.rs  subsonic.rs
src/backend/src/sqlite/: internal_db.rs  mod.rs
src/backend/src/storage/: mod.rs  storage.rs
src/frontend/: app.js  hub.html  hub.js  index.html  style.css
src/frontend/pages/: artist.html  hub.html  musics-recents.html  top.html
src/frontend/pages/javascript/: app.js  artist.js  dashboard.js  hub.js  top.js
